feat(ui-desktop): implement desktop UI